--- a/case_1.html
+++ b/case_1.html
@@ -164,7 +164,7 @@
                     </div>
                 </div>
                 <div class="services" id="about">
-                <h1>За что мы берем 10% от оборотки</h1>
+                <h1>За&nbsp;что мы&nbsp;берем&nbsp;10% от&nbsp;оборотки</h1>
                 <hr>
                 <div class="gallery">
                     <div class="case_1_page_services_line1">
